<?xml version="1.0" encoding="utf-8"?>
<!-- @author 雾晚 -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/rr_basic">
        <EditTextPreference app:key="routeName" app:title="@string/route_name" app:useSimpleSummaryProvider="true" />
<moe.matsuri.nb4a.ui.SimpleMenuPreference app:key="rr_action" app:title="@string/rr_action" app:entries="@array/rr_action_entries" app:entryValues="@array/rr_action_values" app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.OutboundPreference app:key="routeOutbound" app:title="@string/rr_action" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/rr_common">
        <io.nekohasekai.sagernet.widget.AppListPreference app:key="routePackages" app:title="@string/apps" app:summary="@string/rr_apps_modes" />
        <EditTextPreference app:key="routeDomain" app:title="@string/rr_legacy_domain" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routeIP" app:title="@string/rr_ip_cidr" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routeRuleset" app:title="@string/rr_rule_set" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <Preference app:key="rr_picker" app:title="@string/rr_picker" app:persistent="false" />
        <EditTextPreference app:key="rr_domain" app:title="@string/rr_domain" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_domain_suffix" app:title="@string/rr_domain_suffix" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
        <Preference app:key="rr_toggle" app:title="@string/rr_show_advanced" app:persistent="false" />
    <PreferenceCategory app:key="rr_advanced" app:title="@string/rr_advanced" app:isPreferenceVisible="false">
        <EditTextPreference app:key="routeSource" app:title="@string/rr_source_ip_cidr" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routePort" app:title="@string/rr_port" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routeSourcePort" app:title="@string/rr_source_port" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routeNetwork" app:title="@string/rr_network" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="routeProtocol" app:title="@string/rr_protocol" app:dialogMessage="@string/rr_lines" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_domain_keyword" app:title="@string/rr_domain_keyword" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_domain_regex" app:title="@string/rr_domain_regex" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_inbound" app:title="@string/rr_inbound" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_sniffer" app:title="@string/rr_sniffer" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_override_address" app:title="@string/rr_override_address" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="rr_override_port" app:title="@string/rr_override_port" app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat app:key="rr_ip_is_private" app:title="@string/rr_ip_is_private"  />
        <SwitchPreferenceCompat app:key="rr_source_ip_is_private" app:title="@string/rr_source_ip_is_private"  />
        <SwitchPreferenceCompat app:key="rr_invert" app:title="@string/rr_invert"  />
        <SwitchPreferenceCompat app:key="rr_no_drop" app:title="@string/rr_no_drop"  />
<moe.matsuri.nb4a.ui.SimpleMenuPreference app:key="rr_method" app:title="@string/rr_method" app:entries="@array/rr_method_entries" app:entryValues="@array/rr_method_values" app:useSimpleSummaryProvider="true" />
<moe.matsuri.nb4a.ui.SimpleMenuPreference app:key="rr_strategy" app:title="@string/rr_strategy" app:entries="@array/rr_strategy_entries" app:entryValues="@array/rr_strategy_values" app:useSimpleSummaryProvider="true" />
<moe.matsuri.nb4a.ui.SimpleMenuPreference app:key="rr_ip_version" app:title="@string/rr_ip_version" app:entries="@array/rr_ip_version_entries" app:entryValues="@array/rr_ip_version_values" app:useSimpleSummaryProvider="true" />
        <Preference app:key="rr_limits" app:title="@string/rr_advanced" app:summary="@string/rr_limits" app:selectable="false" />
        <moe.matsuri.nb4a.ui.EditConfigPreference app:key="serverConfig" app:title="@string/custom_config" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
